--- a/app/views/create-event/partner-logos.html
+++ b/app/views/create-event/partner-logos.html
@@ -83,13 +83,18 @@
 					  <label class="form-label-bold" style="margin-bottom:0px;">
 						  Partner logo 1
 					  </label>
-					  <div id="logo-1" style="margin-top:2px">
+					  <div id="logo-1-button" style="margin-top:2px">
 						  <input type="submit" class="button-secondary" value="Choose an image" onclick="hidelogo1()">
 					  </div>
 					  <div id="image-area-1" style="margin-top:2px; display:none">
-						  <img src="/public/images/partner11.jpg" style="width:205px;height:89px; border:1px solid #000000">
-						  <p><a href="">Change image</a><br>
-							 <a href="">Remove image</a></p>
+						  <div style="display:flex; flex-direction: row;">
+							  <img src="/public/images/partner11.jpg" style="width:205px;height:89px; border:1px solid #000000; margin-bottom:4px;">
+							  <div style="display:flex; flex-direction: column;">
+								  <p style="flex: 1 1 auto;"></p>
+							  	  <p style="margin-left:10px; margin-bottom:0px;" ><a href="">Change image</a><br>
+								  <a href="">Remove image</a></p>
+							  </div>
+						  </div>
 					  </div>
 				  </div>
 
@@ -99,11 +104,89 @@
 						  Partner logo 2
 					  </label>
 					  <div id="image-area-2" style="margin-top:2px;">
-						  <img src="/public/images/partner12.jpg" style="width:205px;height:89px; border:1px solid #000000">
-						  <p><a href="">Change image</a><br>
-							  <a href="">Remove image</a></p>
+						  <div style="display:flex; flex-direction: row;">
+							  <img src="/public/images/partner12.jpg" style="width:205px;height:89px; border:1px solid #000000; margin-bottom:4px;">
+							  <div style="display:flex; flex-direction: column;">
+								  <p style="flex: 1 1 auto;"></p>
+								  <p style="margin-left:10px; margin-bottom:0px;" ><a href="">Change image</a><br>
+									  <a href="">Remove image</a></p>
+							  </div>
+						  </div>
 					  </div>
 				  </div>
+
+
+
+				  <div id="partner-3" style="margin-bottom:30px; display:none;">
+					  <label class="form-label-bold" style="margin-bottom:0px;">
+						  Partner logo 3
+					  </label>
+					  <div id="image-area-3" style="margin-top:2px;">
+						  <div style="display:flex; flex-direction: row;">
+							  <img src="/public/images/partner13.jpg" style="width:205px;height:89px; border:1px solid #000000; margin-bottom:4px;">
+							  <div style="display:flex; flex-direction: column;">
+								  <p style="flex: 1 1 auto;"></p>
+								  <p style="margin-left:10px; margin-bottom:0px;" ><a href="">Change image</a><br>
+									  <a href="">Remove image</a></p>
+							  </div>
+						  </div>
+					  </div>
+				  </div>
+
+
+
+				  <div id="partner-4" style="margin-bottom:30px; display:none;">
+					  <label class="form-label-bold" style="margin-bottom:0px;">
+						  Partner logo 4
+					  </label>
+					  <div id="image-area-4" style="margin-top:2px;">
+						  <div style="display:flex; flex-direction: row;">
+							  <img src="/public/images/partner14.jpg" style="width:205px;height:89px; border:1px solid #000000; margin-bottom:4px;">
+							  <div style="display:flex; flex-direction: column;">
+								  <p style="flex: 1 1 auto;"></p>
+								  <p style="margin-left:10px; margin-bottom:0px;" ><a href="">Change image</a><br>
+									  <a href="">Remove image</a></p>
+							  </div>
+						  </div>
+					  </div>
+				  </div>
+
+
+
+				  <div id="partner-5" style="margin-bottom:30px; display:none;">
+					  <label class="form-label-bold" style="margin-bottom:0px;">
+						  Partner logo 5
+					  </label>
+					  <div id="image-area-5" style="margin-top:2px;">
+						  <div style="display:flex; flex-direction: row;">
+							  <img src="/public/images/partner11.jpg" style="width:205px;height:89px; border:1px solid #000000; margin-bottom:4px;">
+							  <div style="display:flex; flex-direction: column;">
+								  <p style="flex: 1 1 auto;"></p>
+								  <p style="margin-left:10px; margin-bottom:0px;" ><a href="">Change image</a><br>
+									  <a href="">Remove image</a></p>
+							  </div>
+						  </div>
+					  </div>
+				  </div>
+
+
+
+				  <div id="partner-6" style="margin-bottom:30px; display:none;">
+					  <label class="form-label-bold" style="margin-bottom:0px;">
+						  Partner logo 6
+					  </label>
+					  <div id="image-area-6" style="margin-top:2px;">
+						  <div style="display:flex; flex-direction: row;">
+							  <img src="/public/images/partner12.jpg" style="width:205px;height:89px; border:1px solid #000000; margin-bottom:4px;">
+							  <div style="display:flex; flex-direction: column;">
+								  <p style="flex: 1 1 auto;"></p>
+								  <p style="margin-left:10px; margin-bottom:0px;" ><a href="">Change image</a><br>
+									  <a href="">Remove image</a></p>
+							  </div>
+						  </div>
+					  </div>
+				  </div>
+
 
 
 
@@ -112,64 +195,29 @@
 						  Add another logo
 					  </label>
 					  <div style="margin-top:2px">
-						  <input type="submit" class="button-secondary" value="Choose an image">
+						  <input type="submit" class="button-secondary" value="Choose an image" onclick="shownextlogo()">
 					  </div>
 				  </div>
 
 
 
-
-
-<!--
-				  <div id="partner-3"  style="margin-bottom:30px;">
-					  <label class="form-label-bold" style="margin-bottom:0px;">
-						  Partner logo 3
-					  </label>
-					  <div style="margin-top:2px">
-						  <input type="submit" class="button-secondary" value="Choose an image">
-					  </div>
-				  </div>
-
-
-				  <div id="partner-4"  style="margin-bottom:30px;">
-					  <label class="form-label-bold" style="margin-bottom:0px;">
-						  Partner logo 4
-					  </label>
-					  <div style="margin-top:2px">
-						  <input type="submit" class="button-secondary" value="Choose an image">
-					  </div>
-				  </div>
-
-
-				  <div id="partner-5" style="margin-bottom:30px;">
-					  <label class="form-label-bold" style="margin-bottom:0px;">
-						  Partner logo 5
-					  </label>
-					  <div style="margin-top:2px">
-						  <input type="submit" class="button-secondary" value="Choose an image">
-					  </div>
-				  </div>
-
-
-				  <div id="partner-6" style="margin-bottom:30px;">
-					  <label class="form-label-bold" style="margin-bottom:0px;">
-						  Partner logo 6
-					  </label>
-					  <div style="margin-top:2px">
-						  <input type="submit" class="button-secondary" value="Choose an image">
-					  </div>
-				  </div>
-
-				  -->
 
 			  </div>
 
 
-		<form action="/create-event/images-onwards" method="get" class="form">
+		<form action="/create-event/partner-logos-onwards" method="get" class="form">
+
+		  <div style="display:none" >
+			  <input id="logo-1" name="logo-1" type="checkbox" value="logo1">
+			  <input id="logo-2" name="logo-2" type="checkbox" value="logo2">
+			  <input id="logo-3" name="logo-3" type="checkbox" value="logo3">
+			  <input id="logo-4" name="logo-4" type="checkbox" value="logo4">
+			  <input id="logo-5" name="logo-5" type="checkbox" value="logo5">
+			  <input id="logo-6" name="logo-6" type="checkbox" value="logo6">
+		  </div>
 
 		  <div class="form-group" style="margin-top:20px">
 			  <input type="submit" class="button" value="Save and continue">
-
 			  <input type="submit" formaction="/create-event/partner-logos-skip" value="I'll complete this later - I don't have this information yet"
 					 style="margin-top:25px; border:0px; padding:0px; background-color: transparent; color: #005ea5; text-decoration: underline; cursor: pointer; ">
 		  </div>
@@ -177,7 +225,6 @@
 	  	</form>
 
     </div>
-
 
   </div>
 </main>
@@ -190,21 +237,39 @@
 
 	function hidelogo1()
 	{
-		document.getElementById('logo-1').style.display = 'none';
+		document.getElementById('logo-1-button').style.display = 'none';
 		document.getElementById('image-area-1').style.display = 'inline';
+		document.getElementById("logo-1").checked = true;
 	}
 
 	function shownextlogo()
 	{
-		if(document.getElementById('partner-2').style.display == none)
+		if(document.getElementById('partner-2').style.display == 'none')
 		{
-			afsdffasdf
+			document.getElementById('partner-2').style.display = 'block';
+			document.getElementById("logo-2").checked = true;
 		}
-		document.getElementById('logo-2').style.display = 'none';
-		document.getElementById('image-area-2').style.display = 'inline';
+		else if(document.getElementById('partner-3').style.display == 'none')
+		{
+			document.getElementById('partner-3').style.display = 'block';
+			document.getElementById("logo-3").checked = true;
+		}
+		else if(document.getElementById('partner-4').style.display == 'none')
+		{
+			document.getElementById('partner-4').style.display = 'block';
+			document.getElementById("logo-4").checked = true;
+		}
+		else if(document.getElementById('partner-5').style.display == 'none')
+		{
+			document.getElementById('partner-5').style.display = 'block';
+			document.getElementById("logo-5").checked = true;
+		}
+		else if(document.getElementById('partner-6').style.display == 'none')
+		{
+			document.getElementById('partner-6').style.display = 'block';
+			document.getElementById("logo-6").checked = true;
+		}
 	}
-
-
 </script>
 
 {% endblock %}
