--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -418,17 +418,23 @@
 			  <div>
 				  <dt class="cya-question" style="vertical-align:top">Partner logos</dt>
 				  <dd class="cya-answer">
-					  {% if data['eu-logo-selected'] %}
+					  {% if data['logo-1-selected'] %}
 					  	<img src="/public/images/partner11.jpg" style="width:240px; height:100px;">
 					  {% endif %}
-					  {% if data['dit-logo-selected'] %}
+					  {% if data['logo-2-selected'] %}
 					  	<img src="/public/images/partner12.jpg" style="width:240px; height:100px;">
 					  {% endif %}
-					  {% if data['growth-logo-selected'] %}
+					  {% if data['logo-3-selected'] %}
 					  	<img src="/public/images/partner13.jpg" style="width:240px; height:100px;">
 					  {% endif %}
-					  {% if data['bw-logo-selected'] %}
+					  {% if data['logo-4-selected'] %}
 					  	<img src="/public/images/partner14.jpg" style="width:240px; height:100px;">
+					  {% endif %}
+					  {% if data['logo-5-selected'] %}
+					  	<img src="/public/images/partner11.jpg" style="width:240px; height:100px;">
+					  {% endif %}
+					  {% if data['logo-6-selected'] %}
+					  	<img src="/public/images/partner12.jpg" style="width:240px; height:100px;">
 					  {% endif %}
 				  </dd>
 				  <dd class="cya-change" style="vertical-align:top">
@@ -535,7 +541,7 @@
 			  {% endif %}
 
 
-			  {% if session.questionsExist[0] %}
+			  {% if 0 < session.questionsData.length  %}
 				  <div>
 					  <dt class="cya-question">
 						  Question 1<br><br>
@@ -543,14 +549,15 @@
 					  </dt>
 					  <dd class="cya-answer" style="white-space: pre-wrap; vertical-align:top">{{ session.questionsData[0][0] }}<br><br>{{ session.questionsData[0][2] }}<br>{{ session.questionsData[0][3] }}</dd>
 					  <dd class="cya-change">
-						  <a href="#">
+						  <a href="/create-event/change-question/0">
 							  Change<span class="visually-hidden"> contact details</span>
 						  </a>
 					  </dd>
 				  </div>
 			  {% endif %}
 
-			  {% if session.questionsExist[1] %}
+
+			  {% if 1 < session.questionsData.length  %}
 			  <div>
 				  <dt class="cya-question">
 					  Question 2<br><br>
@@ -558,14 +565,15 @@
 				  </dt>
 				  <dd class="cya-answer" style="white-space: pre-wrap; vertical-align:top">{{ session.questionsData[1][0] }}<br><br>{{ session.questionsData[1][2] }}<br>{{ session.questionsData[1][3] }}</dd>
 				  <dd class="cya-change">
-					  <a href="#">
+					  <a href="/create-event/change-question/1">
 						  Change<span class="visually-hidden"> contact details</span>
 					  </a>
 				  </dd>
 			  </div>
 			  {% endif %}
 
-			  {% if session.questionsExist[2] %}
+
+			  {% if  2 < session.questionsData.length%}
 			  <div>
 				  <dt class="cya-question">
 					  Question 3<br><br>
@@ -580,7 +588,8 @@
 			  </div>
 			  {% endif %}
 
-			  {% if session.questionsExist[3] %}
+
+			  {% if  3 < session.questionsData.length %}
 			  <div>
 				  <dt class="cya-question">
 					  Question 4<br><br>
@@ -595,7 +604,8 @@
 			  </div>
 			  {% endif %}
 
-			  {% if session.questionsExist[4] %}
+
+			  {% if  4 < session.questionsData.length %}
 			  <div>
 				  <dt class="cya-question">
 					  Question 5<br><br>
