--- a/app/views/create-event/template-reg.html
+++ b/app/views/create-event/template-reg.html
@@ -23,11 +23,11 @@
 
 
 	  <h1 class="heading-large" style="margin-top:15px; margin-bottom:35px">
-		  Set event registration message
+		  Registration confirmation email
       </h1>
 
 
-	  <p style="margin-bottom:40px;">A confirmation email will automatically be sent to every new person who registers for this event.</p>
+	  <p style="margin-bottom:40px;">Each person who registers for your event will receive the following confirmation email.</p>
 
 
 	  <form action="/create-event/template-reg-onwards" method="get" class="form">
