--- a/app/views/create-event/template-reminder.html
+++ b/app/views/create-event/template-reminder.html
@@ -21,8 +21,10 @@ GOV.UK prototype kit
 
 
 			<h1 class="heading-large" style="margin-top:15px; margin-bottom:35px">
-				Set event reminder message
+				Event reminder emails
 			</h1>
+
+			<p style="margin-bottom:40px;">Use this page to schedule up to two event reminder emails. </p>
 
 
 			<form action="/create-event/template-reminder-onwards" method="get" class="form">
